# RVU-Machine-Unlearning

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  RVUv1.md  pyproject.toml
configs/: adapters.yaml  agentdojo.yaml  bipia.yaml  defenses.yaml  injecagent.yaml  models.yaml  tool_allowlist.yaml
docs/: THEORETICAL_FOUNDATIONS.md
rvu/: Makefile  README.md  __init__.py  pyproject.toml
rvu/defenses/: __init__.py  adapter_gate.py  adapter_registry.py  base.py  fath_adapter.py  promptguard_defense.py  rvg_only.py  rvu.py  rvu_v2.py  vanilla.py
rvu/docker/: Dockerfile  bench.config.json  bench.config.yaml
rvu/harness/: agentdojo_runner.py  bipia_runner.py  injecagent_runner.py
rvu/inference/: llm_llamacpp.py  promptguard.py
rvu/influence/: __init__.py  adapter_influence.py
rvu/reports/: plots.py  schema.json  tables.py
rvu/rvu/: __init__.py  hashing.py  ids.py
rvu/rvu/bench/: __init__.py  benchmarks.py  config.py  model.py  runner.py  tool_gateway.py
rvu/rvu/provenance/: closure.py  dag.py  export.py
rvu/rvu/qa/: benchmark_agentdojo.py  benchmark_bipia.py  benchmark_injecagent.py  metrics.py  run_benchmarks.py  scenarios.py
rvu/rvu/runtime/: log.py  privilege.py  repair.py  step.py
rvu/rvu/rvu_core/: auditor.py  baseline_replay.py  certificate.py  distance.py  operator.py
rvu/rvu/stores/: base.py  control_plane.py  faiss_retrieval.py  memory.py  retrieval.py  router.py  sqlite_memory.py
rvu/scripts/: profile_inference.py  regression_report.py
rvu/tests/: golden_benign_trace.json  test_authz_and_control_plane_invariance.py  test_bench_smoke_gate.py  test_ceni_noninterference.py  test_certificate_auditor.py  test_clean_replay_equivalence.py  test_property_based_graphs.py  test_provenance_closure.py  test_regression_adversarial_synthetic.py  test_regression_benign_tasks.py  test_regression_report_script.py  test_rvu_closure_soundness.py
rvu/tests/fixtures/: baseline_metrics.json  current_metrics.json
rvu/verification/: __init__.py  certificate_v2.py  membership_probe.py
scripts/: setup_cpu.sh  (+11 more)
(+13 files in other folders)
