[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvu"
version = "0.1.0"
description = "RVU - Recovery and Verification Utility for LLM Agents"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["rvu*"]
